--- a/1-parse.ipynb
+++ b/1-parse.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "1. Сканирование страниц, получение полного списка фильмов\n",
+    "2. Парсинг всех фильмов, сохранение комментариев и параметров в объектах набора данных\n",
+    "3. Создание индекса\n",
+    "4. Выделение комментариев в отдельный набор"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "outputs": [],
@@ -26,6 +38,15 @@
    "source": [
     "URL_DORAMY = 'https://doramy.club/page/'"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Тестирование на скрабинг"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -69,43 +90,8 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(r.text)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "page_films=soup.find_all(\"div\", class_=\"post-home\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "10"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "soup = BeautifulSoup(r.text)\n",
+    "page_films=soup.find_all(\"div\", class_=\"post-home\")\n",
     "len(page_films)"
    ],
    "metadata": {
@@ -219,6 +205,24 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Сбор всех ссылок на фильмы"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Постраничное сканирование, собираем все ссылки на отдельные фильмы"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -774,35 +778,7 @@
    "execution_count": 36,
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(film_urls, columns =['url'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4790 entries, 0 to 4789\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   url     4790 non-null   object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 37.5+ KB\n"
-     ]
-    }
-   ],
-   "source": [
+    "df = pd.DataFrame(film_urls, columns =['url'])\n",
     "df.info()"
    ],
    "metadata": {
@@ -827,34 +803,23 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "df = pd.read_csv('doramy.csv', sep=';')"
+    "# Тестирование на скрабинг страницы"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "      Unnamed: 0                                                url\n0              0  https://doramy.club/34127-policejskij-uchastok...\n1              1  https://doramy.club/11136-pogrebyonnyj-gorod-s...\n2              2  https://doramy.club/34047-lyubov-zdes-zapreshh...\n3              3  https://doramy.club/33308-tysyacha-let-dlya-te...\n4              4    https://doramy.club/33385-superzvezda-2550.html\n...          ...                                                ...\n4785        4785               https://doramy.club/62-shef-kim.html\n4786        4786    https://doramy.club/52-shpion-na-polstavki.html\n4787        4787         https://doramy.club/43-zavtra-s-toboj.html\n4788        4788             https://doramy.club/39-moj-malysh.html\n4789        4789             https://doramy.club/25-podsudimyj.html\n\n[4790 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>url</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>https://doramy.club/34127-policejskij-uchastok...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>https://doramy.club/11136-pogrebyonnyj-gorod-s...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>https://doramy.club/34047-lyubov-zdes-zapreshh...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>https://doramy.club/33308-tysyacha-let-dlya-te...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>https://doramy.club/33385-superzvezda-2550.html</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>4785</th>\n      <td>4785</td>\n      <td>https://doramy.club/62-shef-kim.html</td>\n    </tr>\n    <tr>\n      <th>4786</th>\n      <td>4786</td>\n      <td>https://doramy.club/52-shpion-na-polstavki.html</td>\n    </tr>\n    <tr>\n      <th>4787</th>\n      <td>4787</td>\n      <td>https://doramy.club/43-zavtra-s-toboj.html</td>\n    </tr>\n    <tr>\n      <th>4788</th>\n      <td>4788</td>\n      <td>https://doramy.club/39-moj-malysh.html</td>\n    </tr>\n    <tr>\n      <th>4789</th>\n      <td>4789</td>\n      <td>https://doramy.club/25-podsudimyj.html</td>\n    </tr>\n  </tbody>\n</table>\n<p>4790 rows × 2 columns</p>\n</div>"
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
+    "df = pd.read_csv('doramy.csv', sep=';')\n",
     "df"
    ],
    "metadata": {
@@ -892,43 +857,8 @@
    "execution_count": 48,
    "outputs": [],
    "source": [
-    "r = requests.get(df.iloc[0].url)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "outputs": [],
-   "source": [
-    "film=BeautifulSoup(r.text)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'Полицейский участок рядом с пожарной частью дорама (2022)'"
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "r = requests.get(df.iloc[0].url)\n",
+    "film=BeautifulSoup(r.text)\n",
     "film.article.h1.text"
    ],
    "metadata": {
@@ -976,6 +906,63 @@
    ],
    "source": [
     "film.article.select('div.annotaciya')[0].text"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Парсинг основных параметров, таблицы параметров, комментариев"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "комментарии сохраняем как словарь"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def parse_comments(comments):\n",
+    "    comms = []\n",
+    "    for com in comments:\n",
+    "        comms.append(dict(author=com.select('div.ct-author')[0].text,\n",
+    "                          time=com.select('div.ct-ti')[0].text,\n",
+    "                          comment=com.select('div.ct-text')[0].text))\n",
+    "    return comms"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def parse_table(table):\n",
+    "    table_dict = {}\n",
+    "    for line in table.find_all('tr'):\n",
+    "        cols = line.find_all('td')\n",
+    "        table_dict[cols[0].text] = cols[1].text\n",
+    "    return table_dict"
    ],
    "metadata": {
     "collapsed": false,
@@ -1033,206 +1020,6 @@
    ],
    "source": [
     "parse_film('https://doramy.club/34127-policejskij-uchastok-ryadom-s-pozharnoj-chastyu.html')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'Просмотр:'"
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "film.article.table.find_all('tr')[0].find_all('td')[0].text"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<li class=\"comment byuser even thread-even depth-1\">\n<div class=\"comment clearfix\">\n<div class=\"ct-author\">Leodo</div>\n<div class=\"ct-ti\">16 ноября 2022</div>\n<div class=\"ct-text clearfix\" id=\"comment-438079\">\n<p>Очень интригующее начало, а судя по персонажу отца, дальше должно быть ещё интереснее.Спасибо за озвучку!!!</p>\n</div>\n</div>\n</li>"
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "film.article.select('ul.commentlist li')[0]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'Leodo'"
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "film.article.select('ul.commentlist li')[0].select('div.ct-author')[0].text"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'\\nОчень интригующее начало, а судя по персонажу отца, дальше должно быть ещё интереснее.Спасибо за озвучку!!!\\n'"
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "film.article.select('ul.commentlist li')[0].select('div.ct-text')[0].text"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "outputs": [],
-   "source": [
-    "def parse_table(table):\n",
-    "    table_dict = {}\n",
-    "    for line in table.find_all('tr'):\n",
-    "        cols = line.find_all('td')\n",
-    "        table_dict[cols[0].text] = cols[1].text\n",
-    "    return table_dict"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<table>\n<tbody class=\"tbody-sin\">\n<tr><td class=\"naz\">Просмотр:</td><td>1 час 5 мин</td></tr><tr><td class=\"naz\">Сериал:</td><td>12 серий</td></tr><tr><td class=\"naz\">Статус:</td><td>Выходит</td></tr><tr><td class=\"naz\">Добавлена:</td><td class=\"sr\"><span><b>1</b> серия - озвучка,</span><span><b>2</b> серия - субтитры</span></td></tr>\n<tr><td class=\"naz\">Год:</td><td>2022</td></tr><tr><td class=\"naz\">Страна:</td><td>Южная Корея</td></tr><tr><td class=\"naz\">Жанр:</td><td>Детектив, Драма</td></tr><tr><td class=\"naz\">Перевод:</td><td>Русская озвучка, Русские субтитры</td></tr><tr><td class=\"naz\">Озвучка:</td><td><span class=\"ozv\"><a href=\"https://doramy.club/studiya/1-softbox\">SoftBox</a></span></td></tr><tr><td class=\"naz\">В ролях:</td><td><div class=\"tdlinks\"><span><a data-img=\"https://doramy.club/wp-content/uploads/2017/08/gon-syn-yon.jpg\" href=\"https://doramy.club/akter/gon-syn-yon\">Гон Сын Ён</a>, </span> <span><a data-img=\"https://doramy.club/wp-content/uploads/2017/08/kim-re-von.jpg\" href=\"https://doramy.club/akter/kim-re-von\">Ким Рэ Вон</a>, </span> <span><a data-img=\"https://doramy.club/wp-content/uploads/2017/10/son-xo-dzhun.jpg\" href=\"https://doramy.club/akter/son-xo-dzhun\">Сон Хо Джун</a>, </span> <span><a data-img=\"https://doramy.club/wp-content/uploads/2017/09/chzhi-u.jpg\" href=\"https://doramy.club/akter/chzhi-u\">Чжи У</a>, </span> <span><a data-img=\"https://doramy.club/wp-content/uploads/2020/04/chon-san-xun.jpg\" href=\"https://doramy.club/akter/chon-san-xun\">Чон Сан Хун</a></span></div></td></tr></tbody>\n</table>"
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "film.article.table"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'Просмотр:': '1 час 5 мин',\n 'Сериал:': '12 серий',\n 'Статус:': 'Выходит',\n 'Добавлена:': '1 серия - озвучка,2 серия - субтитры',\n 'Год:': '2022',\n 'Страна:': 'Южная Корея',\n 'Жанр:': 'Детектив, Драма',\n 'Перевод:': 'Русская озвучка, Русские субтитры',\n 'Озвучка:': 'SoftBox',\n 'В ролях:': 'Гон Сын Ён,  Ким Рэ Вон,  Сон Хо Джун,  Чжи У,  Чон Сан Хун'}"
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parse_table(film.article.table)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "outputs": [],
-   "source": [
-    "def parse_comments(comments):\n",
-    "    comms = []\n",
-    "    for com in comments:\n",
-    "        comms.append(dict(author=com.select('div.ct-author')[0].text,\n",
-    "                          time=com.select('div.ct-ti')[0].text,\n",
-    "                          comment=com.select('div.ct-text')[0].text))\n",
-    "    return comms"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[{'author': 'Leodo',\n  'time': '16 ноября 2022',\n  'comment': '\\nОчень интригующее начало, а судя по персонажу отца, дальше должно быть ещё интереснее.Спасибо за озвучку!!!\\n'},\n {'author': 'Nilufar',\n  'time': '16 ноября 2022',\n  'comment': '\\nОчень интересная дорома\\n'},\n {'author': 'Dariia13',\n  'time': '16 ноября 2022',\n  'comment': '\\nЯ все жду «Децибел» с Ким Ре Воном и Ли Чон Соком, и обновляю его имя на сайте, а тут такая неожиданность, ещё одна дорама с ним) Спасибо!\\n'},\n {'author': 'Маркус',\n  'time': '16 ноября 2022',\n  'comment': '\\nчто то хромать стали выходы серий дорам с озвучкой — целых 4 дня уже едут к нам из кореи наверное в китайских контейнерах по морскому пути\\n'},\n {'author': 'Лиза Мин',\n  'time': '16 ноября 2022',\n  'comment': '\\nНачало очень интригует! Ещо одна дорама в копилку новеньких ангоингов.\\n'},\n {'author': 'Iren',\n  'time': '15 ноября 2022',\n  'comment': '\\nИнтересненько 👍\\n'},\n {'author': '誰か',\n  'time': '15 ноября 2022',\n  'comment': '\\nОчень интересная дорама жду продолжения.\\nСпасибо за перевод и озвучку очень вам благодарна.\\n'},\n {'author': 'АТПМ',\n  'time': '15 ноября 2022',\n  'comment': '\\nВсё очень сочно и классно звучит!!\\nНапоминает это мне один мой любимый мультсериал.))\\n'},\n {'author': 'Элла',\n  'time': '15 ноября 2022',\n  'comment': '\\nЭто лучшее что я смотрела 🔥\\n'},\n {'author': 'Алия',\n  'time': '15 ноября 2022',\n  'comment': '\\nДовольно интересный сюжет. Как раз по эти жанрам искала дораму . Уже первая серия  так заинтересовало что бросить никак нельзя. Советую тем кто любит детектив. ❤️\\n'},\n {'author': 'Frau_aka_Zehel',\n  'time': '14 ноября 2022',\n  'comment': '\\nЧто ж, выглядит многообещающе))\\n'},\n {'author': 'veracol',\n  'time': '14 ноября 2022',\n  'comment': '\\nнеплохо, довольно неплохо\\n'},\n {'author': 'Abdunabiyevas',\n  'time': '14 ноября 2022',\n  'comment': '\\nДорама очень интересная и отличная. Эта дорама начала интересовать меня с первой части и заставила ждать вторую часть. Пусть поскорее выйдут следующие части. Всем рекомендую эту дораму❤️🔥\\n'},\n {'author': 'Айгерим',\n  'time': '14 ноября 2022',\n  'comment': '\\nИнтересный дорама про полицию\\n'},\n {'author': 'Венера',\n  'time': '14 ноября 2022',\n  'comment': '\\nОчень крутая дорама всем советую\\n'},\n {'author': 'Nur1ym',\n  'time': '14 ноября 2022',\n  'comment': '\\nПока что смотрю\\n'},\n {'author': 'Linok47',\n  'time': '14 ноября 2022',\n  'comment': '\\nДорама бомба,честно говоря!!!!!!!!!!!\\n'},\n {'author': 'Azalia',\n  'time': '14 ноября 2022',\n  'comment': '\\nОчень понравилось❤️\\n'}]"
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parse_comments(film.article.select('ul.commentlist li'))"
    ],
    "metadata": {
     "collapsed": false,
@@ -6249,6 +6036,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Выделение индекса из url"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 136,
    "outputs": [
@@ -6361,6 +6157,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "проверка на дубли"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 147,
    "outputs": [
@@ -6423,29 +6228,6 @@
    ],
    "source": [
     "df_new.loc[df_new.id == '5255']"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "num                                                      4349\nurl         https://doramy.club/5255-novoe-puteshestvie-na...\nname               Новое путешествие на запад 2 дорама (2016)\nimage       https://doramy.club/wp-content/uploads/2018/03...\nnotes       \\nВо втором сезоне ток-шоу «Новое путешествие ...\nparams      {'Просмотр:': '1 час 22 мин.', 'Сериал:': '9 с...\ncomments    [{'author': 'Aika', 'time': '12 июня 2021', 'c...\nid                                                       5255\nName: 4349, dtype: object"
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_new.iloc[4349]"
    ],
    "metadata": {
     "collapsed": false,
@@ -6604,6 +6386,15 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Сохранение комментариев в отдельном файле"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
