--- a/2-pre_processing.ipynb
+++ b/2-pre_processing.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "1. Сбор уникальных значений параметров\n",
+    "2. Создание набора параметров\n",
+    "3. Соединение наборов"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "outputs": [],
@@ -69,6 +80,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Преобразование всех словарей параметров в список"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "outputs": [
@@ -90,6 +110,15 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Сбор уникальных значений"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -132,26 +161,12 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Перевод:                                Русские субтитры\nГод:                                                2022\nСтатус:                                              NaN\nОзвучка:                                             NaN\nВозраст:                                             NaN\nЖанр:                                          Мелодрама\nАвтосабы:                                            NaN\nСтрана:                                           Япония\nСериал:                                         10 серий\nДобавлена:                                           NaN\nПросмотр:                                         51 мин\nВ ролях:      Мацуда Шота,  Такахата Мицуки,  Шисон Джун\ndtype: object"
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "pd.Series(df_doramy.iloc[300].params, index=s)"
+    "# Обработка набора, создание набора параметров"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -193,26 +208,12 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 66,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Index(['Перевод:', 'Год:', 'Статус:', 'Озвучка:', 'Возраст:', 'Жанр:',\n       'Автосабы:', 'Страна:', 'Сериал:', 'Добавлена:', 'Просмотр:',\n       'В ролях:'],\n      dtype='object')"
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "df_doramy_extend.columns"
+    "# Соединение наборов"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -298,18 +299,6 @@
    "source": [
     "df_doramy.to_pickle('doramy_params.pkl')"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
