--- a/3-doramy_comments.ipynb
+++ b/3-doramy_comments.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Распаковка комментариев"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -13,57 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "id\n34127    [{'author': 'Leodo', 'time': '16 ноября 2022',...\n11136    [{'author': 'mysize', 'time': '26 октября 2022...\n34047    [{'author': 'Niky', 'time': '9 ноября 2022', '...\n33308    [{'author': 'Yasmin0906', 'time': '16 ноября 2...\n33385    [{'author': 'dawerivs', 'time': '20 сентября 2...\nName: comments, dtype: object"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_pickle('doramy_comments.pkl')\n",
-    "df.head()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(df)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
       "text/plain": "                                                comments\nid                                                      \n34127  [{'author': 'Leodo', 'time': '16 ноября 2022',...\n11136  [{'author': 'mysize', 'time': '26 октября 2022...\n34047  [{'author': 'Niky', 'time': '9 ноября 2022', '...\n33308  [{'author': 'Yasmin0906', 'time': '16 ноября 2...\n33385  [{'author': 'dawerivs', 'time': '20 сентября 2...",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>comments</th>\n    </tr>\n    <tr>\n      <th>id</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>34127</th>\n      <td>[{'author': 'Leodo', 'time': '16 ноября 2022',...</td>\n    </tr>\n    <tr>\n      <th>11136</th>\n      <td>[{'author': 'mysize', 'time': '26 октября 2022...</td>\n    </tr>\n    <tr>\n      <th>34047</th>\n      <td>[{'author': 'Niky', 'time': '9 ноября 2022', '...</td>\n    </tr>\n    <tr>\n      <th>33308</th>\n      <td>[{'author': 'Yasmin0906', 'time': '16 ноября 2...</td>\n    </tr>\n    <tr>\n      <th>33385</th>\n      <td>[{'author': 'dawerivs', 'time': '20 сентября 2...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_pickle('doramy_comments.pkl')\n",
+    "df = pd.DataFrame(df)\n",
     "df.head()"
    ],
    "metadata": {
@@ -79,30 +52,6 @@
    "outputs": [],
    "source": [
     "df.reset_index(inplace=True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "      id                                           comments\n0  34127  [{'author': 'Leodo', 'time': '16 ноября 2022',...\n1  11136  [{'author': 'mysize', 'time': '26 октября 2022...\n2  34047  [{'author': 'Niky', 'time': '9 ноября 2022', '...\n3  33308  [{'author': 'Yasmin0906', 'time': '16 ноября 2...\n4  33385  [{'author': 'dawerivs', 'time': '20 сентября 2...",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>comments</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>34127</td>\n      <td>[{'author': 'Leodo', 'time': '16 ноября 2022',...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>11136</td>\n      <td>[{'author': 'mysize', 'time': '26 октября 2022...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>34047</td>\n      <td>[{'author': 'Niky', 'time': '9 ноября 2022', '...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>33308</td>\n      <td>[{'author': 'Yasmin0906', 'time': '16 ноября 2...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>33385</td>\n      <td>[{'author': 'dawerivs', 'time': '20 сентября 2...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ],
    "metadata": {
     "collapsed": false,
@@ -205,18 +154,6 @@
    "source": [
     "df1.to_pickle('doramy_comments_plain.pkl')"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
