--- a/4-doramy_sentiment.ipynb
+++ b/4-doramy_sentiment.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Проверка на сантимент"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "outputs": [],
